--- a/DemoPrototype/MaintenancePage.xaml
+++ b/DemoPrototype/MaintenancePage.xaml
@@ -74,8 +74,22 @@
                     </StackPanel>
                 </StackPanel>
             </Border>
-        
-           </StackPanel>
+            <Border Margin="5,5,5,5" Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" >
+                <StackPanel  Margin="5,5,5,5" Orientation="Vertical">
+                    <TextBlock FontWeight="SemiBold" Text="Flow (lpm)"></TextBlock>
+                    <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
+                        <TextBlock VerticalAlignment="Center" Width="140" Text="Coolant water"></TextBlock>
+                        <TextBox Name="CoolantWater" IsEnabled="False" Text="55"></TextBox>
+                    </StackPanel>
+                    <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
+                        <TextBlock VerticalAlignment="Center" Width="140" Text="Heat transfer oil"></TextBlock>
+                        <TextBox IsEnabled="False" Text="55"></TextBox>
+                    </StackPanel>
+
+                </StackPanel>
+            </Border>
+          
+        </StackPanel>
 
         <!-- Column 2-->
         
@@ -169,20 +183,7 @@
         <!-- Column three -->
 
         <StackPanel  Orientation="Vertical" Grid.Column="2" Width="250" Margin="5,5,0,0">
-            <Border Margin="5,5,5,5" Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" >
-                <StackPanel  Margin="5,5,5,5" Orientation="Vertical">
-                    <TextBlock FontWeight="SemiBold" Text="Flow (lpm)"></TextBlock>
-                    <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
-                        <TextBlock VerticalAlignment="Center" Width="140" Text="Coolant water"></TextBlock>
-                        <TextBox Name="CoolantWater" IsEnabled="False" Text="55"></TextBox>
-                    </StackPanel>
-                    <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
-                        <TextBlock VerticalAlignment="Center" Width="140" Text="Heat transfer oil"></TextBlock>
-                        <TextBox IsEnabled="False" Text="55"></TextBox>
-                    </StackPanel>
-
-                </StackPanel>
-            </Border>
+            
 
             <Border Margin="5,5,5,5" Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" >
                 <StackPanel  Margin="5,5,5,5" Orientation="Vertical">
@@ -199,23 +200,11 @@
                         <TextBlock VerticalAlignment="Center" Width="140" Text="Tool return"></TextBlock>
                         <TextBox IsEnabled="False" Text="55"></TextBox>
                     </StackPanel>
-                    <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
-                        <TextBlock VerticalAlignment="Center" Width="140" Text="Hot tank"></TextBlock>
-                        <TextBox IsEnabled="False" Text="55"></TextBox>
-                    </StackPanel>
-                    <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
-                        <TextBlock VerticalAlignment="Center" Width="140" Text="Cold tank"></TextBlock>
-                        <TextBox IsEnabled="False" Text="55"></TextBox>
-                    </StackPanel>
-                    <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
+                     <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                         <TextBlock VerticalAlignment="Center" Width="140" Text="Particle filter"></TextBlock>
                         <TextBox IsEnabled="False" Text="55"></TextBox>
                     </StackPanel>
-                    <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
-                        <TextBlock VerticalAlignment="Center" Width="140" Text="Tool feed output"></TextBlock>
-                        <TextBox IsEnabled="False" Text="55"></TextBox>
-                    </StackPanel>
-                    <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
+                   <StackPanel Margin="5,5,0,0" Orientation="Horizontal">
                         <TextBlock VerticalAlignment="Center" Width="140" Text="Pneumatics"></TextBlock>
                         <TextBox IsEnabled="False" Text="55"></TextBox>
                     </StackPanel>
@@ -225,45 +214,52 @@
 
             <Border Margin="5,5,5,5" Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" >
                 <StackPanel  Margin="5,5,5,5" Orientation="Vertical">
+                    <TextBlock Margin="0,0,0,0" FontWeight="SemiBold" Text="System power"></TextBlock>
+                    <Border Margin="5,5,5,5" Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" >
+                        <StackPanel  Margin="5,5,5,5" Orientation="Vertical">
+                            <TextBlock FontWeight="SemiBold" Text="Voltage (VAC)"></TextBlock>
+                            <StackPanel Margin="5,2,0,0" Orientation="Horizontal">
+                                <TextBlock VerticalAlignment="Center" Width="140" Text="L1"></TextBlock>
+                                <TextBox IsEnabled="False" Text="230"></TextBox>
+                            </StackPanel>
+                            <StackPanel Margin="5,2,0,0" Orientation="Horizontal">
+                                <TextBlock VerticalAlignment="Center" Width="140" Text="L2"></TextBlock>
+                                <TextBox IsEnabled="False" Text="230"></TextBox>
+                            </StackPanel>
+                            <StackPanel Margin="5,2,0,0" Orientation="Horizontal">
+                                <TextBlock VerticalAlignment="Center" Width="140" Text="L3"></TextBlock>
+                                <TextBox IsEnabled="False" Text="230"></TextBox>
+                            </StackPanel>
+
+                        </StackPanel>
+                    </Border>
+
+
+                    <Border Margin="5,5,5,5" Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" >
+                <StackPanel  Margin="5,5,5,5" Orientation="Vertical">
                     <TextBlock Margin="0,0,0,0" FontWeight="SemiBold" Text="Current (A)"></TextBlock>
                     <StackPanel Margin="5,2,0,0" Orientation="Horizontal">
-                        <TextBlock VerticalAlignment="Center" Width="140" Text="Heating bars Phase1"></TextBlock>
-                        <TextBox IsEnabled="False" Text="22"></TextBox>
-                    </StackPanel>
+                        <TextBlock VerticalAlignment="Center" Width="140" Text="L1"></TextBlock>
+                                <TextBox IsEnabled="False" Text="35"></TextBox>
+                            </StackPanel>
                     <StackPanel Margin="5,2,0,0" Orientation="Horizontal">
-                        <TextBlock VerticalAlignment="Center" Width="140" Text="Heating bars Phase2"></TextBlock>
-                        <TextBox IsEnabled="False" Text="22"></TextBox>
+                        <TextBlock VerticalAlignment="Center" Width="140" Text="L2"></TextBlock>
+                        <TextBox IsEnabled="False" Text="35"></TextBox>
                     </StackPanel>
                     <StackPanel Margin="5,2,0,5" Orientation="Horizontal">
-                        <TextBlock VerticalAlignment="Center" Width="140" Text="Heating bars Phase3"></TextBlock>
-                        <TextBox IsEnabled="False" Text="22"></TextBox>
+                        <TextBlock VerticalAlignment="Center" Width="140" Text="L3"></TextBlock>
+                        <TextBox IsEnabled="False" Text="35"></TextBox>
                     </StackPanel>
 
                 </StackPanel>
             </Border>
-
-            <Border Margin="5,5,5,5" Grid.Row="0" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" CornerRadius="5" >
-                <StackPanel  Margin="5,5,5,5" Orientation="Vertical">
-                    <TextBlock FontWeight="SemiBold" Text="Voltage (On/Off)"></TextBlock>
-                    <StackPanel Margin="5,2,0,0" Orientation="Horizontal">
-                        <TextBlock VerticalAlignment="Center" Width="140" Text="Electric Phase L1"></TextBlock>
-                        <ToggleSwitch IsEnabled="False" Margin="5,0,0,0"></ToggleSwitch>
-                    </StackPanel>
-                    <StackPanel Margin="5,2,0,0" Orientation="Horizontal">
-                        <TextBlock VerticalAlignment="Center" Width="140" Text="Electric Phase L2"></TextBlock>
-                        <ToggleSwitch IsEnabled="False" Margin="5,0,0,0"></ToggleSwitch>
-                    </StackPanel>
-                    <StackPanel Margin="5,2,0,0" Orientation="Horizontal">
-                        <TextBlock VerticalAlignment="Center" Width="140" Text="Electric Phase L3"></TextBlock>
-                        <ToggleSwitch IsEnabled="False" Margin="5,0,0,0"></ToggleSwitch>
-                    </StackPanel>
-
-                </StackPanel>
-            </Border>
-
 
             
-        <!-- /StackPanel >
+
+                </StackPanel>
+            </Border>
+
+            <!-- /StackPanel >
 
         <StackPanel Grid.Column="3" Margin='20,0,0,0' 
               <Line Stroke="#FF4D4D4D" StrokeThickness="3" Height="5"/>
@@ -318,7 +314,7 @@
             <!-- sfgrid:SfDataGrid x:Name="LogGrid" Height="500" ColumnSizer="Star" AllowSorting="True" AllowFiltering="True" ItemsSource="{Binding logMessages}"/ -->
 
     
-                <Button x:Name="exportButton"  Margin="0,10,0,0" Content="Export to excel file" Click="exportButton_Click"></Button>
+                <Button x:Name="exportButton"  Margin="0,10,0,0" Content="Export to Excel file" Click="exportButton_Click"></Button>
      
             </StackPanel>
         </Border>
