--- a/DemoPrototype/SettingsPage.xaml
+++ b/DemoPrototype/SettingsPage.xaml
@@ -21,6 +21,10 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" ></ColumnDefinition>
@@ -90,7 +94,7 @@
             </StackPanel>
         </Border>
 
-        <Border Margin="5,5,10,5" BorderBrush="LightGray"  BorderThickness="2" CornerRadius="5" Grid.Row="5">
+        <Border Margin="5,5,10,5" BorderBrush="LightGray"  BorderThickness="2" CornerRadius="5" Grid.Row="4">
             <StackPanel Orientation="Vertical">
                 <TextBlock Margin="5,5,0,5"  Text="Only used for testing communication"  FontWeight="SemiBold"></TextBlock>
                 <StackPanel Margin="5,0,5,5" Orientation="Horizontal" >
@@ -102,6 +106,8 @@
             </StackPanel>
         </Border>
 
+        <StackPanel  Grid.Column="1" Grid.RowSpan="16" Orientation="Vertical">
+        
         <Border Margin="5,5,10,5" BorderBrush="LightGray"  BorderThickness="2" CornerRadius="5" Grid.Row="0" Grid.RowSpan="4" Grid.Column="1" Grid.ColumnSpan="2">
             <StackPanel Orientation="Vertical">
                 <TextBlock Margin="5,5,0,5"  Text="Heat transfer fluid used"  FontWeight="SemiBold"></TextBlock>
@@ -157,6 +163,6 @@
                 </StackPanel>
             </StackPanel>
         </Border>
-
+        </StackPanel>
     </Grid>
 </Page>
